# Subito

./: .gitignore  README.md  pyproject.toml
subito/: __init__.py  __main__.py  calc.py  cmds.py  output.py  subito.py  validation.py
