# ./pyproject.toml
#
# SUBito subnetting tool
# Author: Johannes Hüffer
# License: GPL-3.0-only
#
# Project build file
#

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subito"
version = "0.1.0"
description = "Subnetting utility and netplanning tool for your command line."
readme = "README.md"
authors = [{ name = "Johannes Hüffer" }]
dependencies = [
    "click >= 8.1.3",
    "xlsxwriter >= 3.2.2"
]

[project.scripts]
subito = "subito.__main__:cli"